# weakinos-jet

./: .Analysis.F.swp  .Reals.F.swp  .init_couplings.F.swp  .init_processes.F.swp  Analysis-decay.F  Analysis-dummy.F  Analysis.F  Born.F  Born_phsp.F  Born_phsp.F.orig  Histogram.F  Makefile  ProcessCitation.f  README.md  Real_osres_phsp.F  Real_osres_phsp.F.orig  Real_phsp.F  Reals.F  Reals_MadGraph.F  Reals_lh.f  Reals_osres.F  Virtuals.F  configure.sh  contributors.txt  init_couplings.F  init_couplings.F.orig  init_processes.F  init_processesCOPY.F  libraries.sh  make-all.sh  phi1_2.f  phi1_2.f.orig  phsp_routines.f  sigosres.f  version.f  weakinos-jet
NeuINeuJjet/: Born.F  Born.F.orig  Bornablage.F  Makefile  Makefile.orig
NeuINeuJjet/run/: powheg.input
NeuINeuJjet/testrun/: FlavRegList  gmon.out  powheg.input
NeuINeuJjetWORKING/: Born.F  Reals.F
NeuINeuJjetWORKING/run/: powheg.input
NeuINeuJjetWORKING/testrun/: FlavRegList  gmon.out
POWHEG_mod/: LesHouches_mod.f  LesHouchesreg_mod.f  NOTES  bbinit_mod.f  bbinit_mod2.f  cernroutines_mod.f  find_regions_mod.f  gen_index_mod.f  gen_radiation_mod.f  init_phys_mod.f  lhefwrite_mod.f  lhefwrite_mod_old.f  mintwrapper_mod.f  pdfcalls_mod.f  pwhg_init_mod.f  pwhg_main_mod.f  pwhgreweight_mod.f  pwhgreweight_mod_old.f  rwl_setup_param_weights_mod.f  rwl_setup_param_weights_user.f  rwl_weightlists_mod.f  sigreal_mod.f  sigremnants_mod.f  sigsoftvirt_mod.f  ubprojections_mod.f
SLHA/mSUGRA_1410.4999/: make
SLHA/softsusy_p10MSSM/: SD_leshouches.in  input_p10MSSM.slha  softsusy_in.slha
SLHA/softsusy_p10MSSMa/: input_p10MSSMa.slha  softsusy_in.slha
SLHA/softsusy_p10MSSMb/: SD_leshouches.in  input_p10MSSMb.slha  softsusy_in.slha
SLHA/softsusy_p10MSSMc/: input_p10MSSMc.slha  make  sdecay_slha.out  softsusy_in.slha
SLHA/softsusy_p10MSSMd/: input_p10MSSMd.slha  make
SLHA/softsusy_p19MSSM1.1/: SD_leshouches.in  input_p19MSSM1.1.slha  make  softsusy_in.slha
SLHA/softsusy_p19MSSM1.2/: SD_leshouches.in  input_p19MSSM1.2.slha  make  softsusy_in.slha
SLHA/softsusy_p19MSSM1.3/: input_p19MSSM1.3.slha  make  sdecay_slha.out  softsusy_in.slha  softsusy_out.slha
SLHA/softsusy_p19MSSM1.4/: SD_leshouches.in  make  softsusy_in.slha
SLHA/softsusy_p19MSSM1Amod/: input_p19MSSM1Amod.slha  make
Scripts/: BORN .m  NOTE  canceljob.sh  clean_rundir.sh  copy_form_amps  copy_form_amps uutoneunejet  copy_form_amps.sh  copy_form_amps.sh.orig  merge.sh  mu_scan.sh  qqbneu1cha1.m  qqtoggBORN.m  qqtoneuneujet.m  qqtoneuneujetBORN.m  qqtoqqgBORN.m  renConst.wdx  rename.sh  runparallel.sh  runparallel_copy_powheg.input.sh  uutoneuneug.m
Scripts/FormCalc/: ._copy_form_amps.sh  .cleanup.sh.swp  add_skiphel.sh  born.m  cleanup.sh  copy_form_amps.sh  coupl_order.nb  double_resonant_tops.nb  finalize.sh  gen_form_amps.sh  higgs.sh  log  log_copy_form_amps  nInJj.m  nInJj_renConst.m  nInJj_virt.m  nInJj_virt_collier.m  nInJj_virt_test.m  nInJjj.m  nInJjj_os.m  nInJjj_os_backup.m  nInJjj_os_bak.m  nInJjj_os_gl.m  nInJjj_os_sq.m  nInJjj_os_test.m  nInJjj_os_test2.m  nInJjj_test.m  nIxJj.m  nIxJj_virt.m  nIxJjj.m  nIxJjj_os.m  neu1neu1+jet.m  neu1neu1+jet_test.m  neu1neu2+jet.m  proc_n1n2j  proc_n1n2jj  proc_n1n2jj_nr  proc_n1n2jj_os  proc_n1n2jj_reg  proc_n1n2jj_simple  (+35 more)
Scripts/MG_ME_V4.5.2_standalone/: README.kesenheimer
Scripts/MadGraph/: copy_mad_amps_mg2.sh  copy_mad_amps_new.sh  copy_mad_amps_standalone.sh  mad_rename_script.sh  modify.sh  rename_sreal_proc.sh  replace_proc_label_real.sh  shift_ids.sh  to_Makefile.sh
Scripts/Modified_Files/: TODO
TODO.rtfd/: TXT.rtf
TODO_print.rtfd/: TXT.rtf
Tools/COLLIER-1.1/: CMakeLists.txt  makefile_basic
Tools/COLLIER-1.1/demos/: demo  demo.f90
Tools/COLLIER-1.1/demos/output_cll/: ErrOut.cll  ErrOut.coli  InfOut.cll
Tools/COLLIER-1.1/modules/: buildtensors.mod  coli_stat.mod  collier.mod  collier_aux.mod  collier_global.mod  combinatorics.mod  dd_2pt.mod  dd_4pt.mod  dd_6pt.mod  dd_global.mod  dd_statistics.mod  globalc.mod  globald.mod  inittensors.mod  reductiond.mod  reductionefg.mod  reductiontn.mod  tensorreduction.mod
Tools/COLLIER-1.1/src/: COLLIER.F90  collier_coefs.F90  collier_init.F90
Tools/COLLIER-1.1/src/Aux/: cache.F90
Tools/COLLIER-1.1/src/COLI/: coli_aux.F  coli_b0.F  coli_c0.F  coli_d0.F  reductionC.F90  reductionD.F90  reductionEFG.F90
Tools/FormCalcTools/: VecSet.F  vecset_util.h
Tools/LoopTools-2.12/: makefile
Tools/MadGraph/: couplings.f  nexper.f  printout.f  read_slha.f  set_general_couplings.f
Tools/SLHALib-2.2/: makefile
Tools/collier/: lt_collier_interface_complex.F90  lt_collier_interface_complex_V1.F90  lt_collier_interface_complex_V3.F90  lt_collier_interface_complex_V4.F90  lt_collier_interface_real.F90
Tools/functions/: Print.f  funcbasic.f  funcprocess.f  funcprocess.f.orig  off_to_on.f
Tools/programs/: adder.f  filter.f  merge-data  merge-data.f  merge-pwg-stat.f  rescaler.f  topintegrator.f
chaIchaJ+jet/: FormCalc.F  Makefile  proc_label  proc_label_born  proc_label_real  set_channel.f
chaIchaJ+jet/FormCalc_Reals/: add_skiphel.sh
chaIchaJ+jet/FormCalc_Virtuals/: add_skiphel.sh
chaIchaJ+jet/testrun/: powheg.input  powheg_bak.input  rwgt_virt.xml
chaIchaJ+jet/testrun_92000/: powheg_clean.input
chaIchaJ+jet/testrun_clean/: powheg_clean.input
docs/Logs/: log_Form_Mad_qubarg  log_dsub_ii  log_ewi_n1n2j  log_ewi_n1n2j__simple_sfe11  log_ewi_n1n2j__simple_sfe22  log_processes  log_virt_boxes_pents
include/: .model_mssm.h.swp  .model_sm.h.swp  Flags.h  Functions.h  PhysPars.h  indices.h  model_mssm.h  model_sm.h  nlegborn.h  phaseSpace.h  pwhg_bookhist-multi.h  pwhg_flst_add.h  pwhg_rad_add.h  specs.h  susy_restore.h  user.h
neuIchaJ/: Born.F  Makefile
neuIchaJ+jet/: FormCalc.F  Makefile  log  proc_label  set_channel.f
neuIchaJ+jet/FormCalc_Reals/: add_skiphel.sh
neuIchaJ+jet/include/: osres.h
neuIneuJ+jet/: .FormCalc.F.swp  ._Makefile  Born.F  FormCalc.F  Makefile  Reals.F  Reals_MadGraph.F  Reals_form.F  Reals_osres.F  Virtuals.F  bmunu_ubaru_n1n2g.f  proc_label  set_channel.f
plot-aux/: genplots.sh  gnuplotsplit.sh
(+9087 files in other folders)
